src/python/MemoryPolicyParser.py
# Generated from MemoryPolicy.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MemoryPolicyParser ( Parser ):

    grammarFileName = "MemoryPolicy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'track_memory'", "'{'", "'}'", "'allocate_by'", 
                     "':'", "'deallocate_by'", "'transfer_ownership'", "'['", 
                     "','", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "STRING", "WS" ]

    RULE_policy = 0
    RULE_allocateBlock = 1
    RULE_deallocateBlock = 2
    RULE_transferBlock = 3
    RULE_list = 4

    ruleNames =  [ "policy", "allocateBlock", "deallocateBlock", "transferBlock", 
                   "list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    STRING=11
    WS=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PolicyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MemoryPolicyParser.EOF, 0)

        def allocateBlock(self):
            return self.getTypedRuleContext(MemoryPolicyParser.AllocateBlockContext,0)


        def deallocateBlock(self):
            return self.getTypedRuleContext(MemoryPolicyParser.DeallocateBlockContext,0)


        def transferBlock(self):
            return self.getTypedRuleContext(MemoryPolicyParser.TransferBlockContext,0)


        def getRuleIndex(self):
            return MemoryPolicyParser.RULE_policy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy" ):
                listener.enterPolicy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy" ):
                listener.exitPolicy(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy" ):
                return visitor.visitPolicy(self)
            else:
                return visitor.visitChildren(self)




    def policy(self):

        localctx = MemoryPolicyParser.PolicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.match(MemoryPolicyParser.T__0)
            self.state = 11
            self.match(MemoryPolicyParser.T__1)
            self.state = 13
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 12
                self.allocateBlock()


            self.state = 16
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 15
                self.deallocateBlock()


            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 18
                self.transferBlock()


            self.state = 21
            self.match(MemoryPolicyParser.T__2)
            self.state = 22
            self.match(MemoryPolicyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllocateBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self):
            return self.getTypedRuleContext(MemoryPolicyParser.ListContext,0)


        def getRuleIndex(self):
            return MemoryPolicyParser.RULE_allocateBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllocateBlock" ):
                listener.enterAllocateBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllocateBlock" ):
                listener.exitAllocateBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllocateBlock" ):
                return visitor.visitAllocateBlock(self)
            else:
                return visitor.visitChildren(self)




    def allocateBlock(self):

        localctx = MemoryPolicyParser.AllocateBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_allocateBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(MemoryPolicyParser.T__3)
            self.state = 25
            self.match(MemoryPolicyParser.T__4)
            self.state = 26
            self.list_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeallocateBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self):
            return self.getTypedRuleContext(MemoryPolicyParser.ListContext,0)


        def getRuleIndex(self):
            return MemoryPolicyParser.RULE_deallocateBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeallocateBlock" ):
                listener.enterDeallocateBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeallocateBlock" ):
                listener.exitDeallocateBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeallocateBlock" ):
                return visitor.visitDeallocateBlock(self)
            else:
                return visitor.visitChildren(self)




    def deallocateBlock(self):

        localctx = MemoryPolicyParser.DeallocateBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_deallocateBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(MemoryPolicyParser.T__5)
            self.state = 29
            self.match(MemoryPolicyParser.T__4)
            self.state = 30
            self.list_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransferBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self):
            return self.getTypedRuleContext(MemoryPolicyParser.ListContext,0)


        def getRuleIndex(self):
            return MemoryPolicyParser.RULE_transferBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransferBlock" ):
                listener.enterTransferBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransferBlock" ):
                listener.exitTransferBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransferBlock" ):
                return visitor.visitTransferBlock(self)
            else:
                return visitor.visitChildren(self)




    def transferBlock(self):

        localctx = MemoryPolicyParser.TransferBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_transferBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(MemoryPolicyParser.T__6)
            self.state = 33
            self.match(MemoryPolicyParser.T__4)
            self.state = 34
            self.list_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(MemoryPolicyParser.STRING)
            else:
                return self.getToken(MemoryPolicyParser.STRING, i)

        def getRuleIndex(self):
            return MemoryPolicyParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = MemoryPolicyParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(MemoryPolicyParser.T__7)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 37
                self.match(MemoryPolicyParser.STRING)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==9:
                    self.state = 38
                    self.match(MemoryPolicyParser.T__8)
                    self.state = 39
                    self.match(MemoryPolicyParser.STRING)
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 47
            self.match(MemoryPolicyParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





